--- a/src/style.css
+++ b/src/style.css
@@ -14,6 +14,7 @@ body {
     margin: auto;
     padding: 8px;
     justify-content: center;
+    
   
     
 }
@@ -28,17 +29,20 @@ body {
 }
 .menu .inicio {
     background-color: rgb(218, 68, 106);
-    -webkit-text-stroke: 1px black
+    font-family: 'Luckiest Guy', cursive;
 
 }
 .menu .iniciopokedex {
     background-color: rgb(53, 247, 53);
+    font-family: 'Luckiest Guy', cursive;
 }
 .menu .inicioJugar {
     background-color: orange;
+    font-family: 'Luckiest Guy', cursive;
 }
 .menu .inicioAcercade{
     background-color: blue;
+    font-family: 'Luckiest Guy', cursive;
 }
 .pokedex_header {
     padding: 10px;
@@ -82,5 +86,45 @@ img{
     justify-content: space-around;
 }
 .containerPokemon {
+    color: white;
+    display: flex;
+    flex-wrap: wrap;
+    background-color: black;
+    align-items: center;
+    justify-content: center;
+    margin: 20px auto;
+}
+.card-pokemon {
+    border: 6px ridge #efb810;
+    border-radius: 10px;
+    width: 10rem;
+    margin: 15px;
+    padding: 20px;
+    background-color: #ffffff;
+    color: black;
+    text-align: center;
+    text-transform: uppercase;
+    transition: all 400ms ease-in-out;
     
+}
+.card-pokemon:hover{
+    transform: scale(1.1);
+}
+.card-pokemon .img-content{
+    filter: drop-shadow(-2px 2px 15px rgba(0, 0, 0, 0.7));
+    
+}
+.card-pokemon .namePokemon{
+    font-family: 'Bungee', cursive;
+    font-size: 18px;
+    color: rgb(17, 17, 17);
+}
+.card-pokemon .numberPokemon{
+    font-family: 'Pacifico', cursive;
+    
+}
+.card-pokemon .typePokemon{
+    font-family: 'Righteous', cursive;
+    color:rgb(66, 62, 62);
+    font-weight: bolder;
 }
