--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,6 @@
 
-
 body {
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.993);
 }
 
 
@@ -12,77 +11,79 @@ body {
     align-items: center;
     margin: auto;
     padding: 8px;
-    justify-content: center;
-    
-  
-    
+    justify-content: center; 
 }
+/* barra inicio */
 .menu button{
     color: rgb(231, 229, 231);
-    padding: 20px;
-    font-size: 30px;
+    padding: 10px;
+    font-size: 25px;
     cursor: pointer;
     border: none;
     text-transform: uppercase;
-    width: 100%;
-    
-    
-    
+    width: 100%;  
 }
+
 .menu .inicio {
-    background-color: rgb(218, 68, 106);
+    background-color: rgb(155, 241, 98);
     font-family: 'Luckiest Guy', cursive;
 
 }
 .menu .iniciopokedex {
-    background-color: rgb(53, 247, 53);
+    background-color: rgb(250, 7, 19);
     font-family: 'Luckiest Guy', cursive;
 }
 .menu .inicioJugar {
-    background-color: orange;
+    background-color: rgb(129, 129, 241);
     font-family: 'Luckiest Guy', cursive;
 }
 .menu .inicioAcercade{
-    background-color: blue;
+    background-color: orange;
     font-family: 'Luckiest Guy', cursive;
 }
+
+/*buscador */
+
 .pokedex_header {
-    padding: 10px;
-    margin: auto;
+    padding: 5px;
+    margin: 0.5 em;
     display: flex;
     flex-direction: row-reverse;
     align-items: center;
     justify-content: space-around;
-   
 }
+
 form{
     display: flex;
 }
 img{
     max-width: 100%;
 }
+/* buscador */
 .pokedex_header form input{
-    padding: 15px;
     border: none;
     border-radius: 5px;
     outline: none;
-    margin: 10px 5px;
+    margin: 5px 5px;
     width: 500px;
+    height: 1.5rem;
 }
+/* bnt pokebola */
 .pokedex_header form button{
-    width: 60px;
-    height: 60px;
+    width: 40px;
+    height: 40px;
     outline: none;
     border: none;
     background: transparent;
     cursor: pointer;
+   
 }
 
 .navoption {
     color: rgb(207, 108, 9);
     background-color: transparent;
     padding-top: 1rem;
-    font-size: 1.5rem;
+    font-size: 1rem;
     display: flex;
     cursor: pointer;
     justify-content: space-around;
@@ -91,17 +92,19 @@ img{
     color: white;
     display: flex;
     flex-wrap: wrap;
-    background-color: black;
+    /*background-color: black; */
     align-items: center;
     justify-content: center;
-    margin: 20px auto;
+    margin: 10px auto;
 }
+
 .card-pokemon {
     border: 6px ridge #efb810;
     border-radius: 10px;
     width: 10rem;
+    height: 17rem;
     margin: 15px;
-    padding: 20px;
+    padding: 15px;
     background-color: #ffffff;
     color: black;
     text-align: center;
@@ -111,22 +114,31 @@ img{
 }
 .card-pokemon:hover{
     transform: scale(1.1);
+    cursor: url(images/pokebola01.png) ;
 }
 .card-pokemon .img-content{
-    filter: drop-shadow(-2px 2px 15px rgba(0, 0, 0, 0.7));
+    filter: drop-shadow(-2px 2px 20px rgba(0, 0, 0, 0.7));
+    
+}
+.card-pokemon .numberPokemon{
+    font-family: 'Pacifico', cursive;
     
 }
 .card-pokemon .namePokemon{
     font-family: 'Bungee', cursive;
     font-size: 18px;
     color: rgb(17, 17, 17);
+
 }
-.card-pokemon .numberPokemon{
-    font-family: 'Pacifico', cursive;
-    
-}
+
 .card-pokemon .typePokemon{
     font-family: 'Righteous', cursive;
     color:rgb(66, 62, 62);
     font-weight: bolder;
 }
+/* style filtar */
+li{
+   list-style: none; 
+   margin: 0;
+   padding: 0;
+  }
