--- a/src/style.css
+++ b/src/style.css
@@ -87,11 +87,12 @@ img{
     height: 90px;
     background: transparent;
     border-radius:50%;
-    margin-left: 50px;
+    margin-left: 10px;
     cursor: pointer;
     color: #52fd00;
     font-family: 'Righteous', cursive;
     font-size: 1.2em;
+    padding-top: 10px;
    
 
 }
